add blueberry1,2,3 / nekomouth1 / taiki1 / yaakiyu1

--- a/games.html
+++ b/games.html
@@ -2,17 +2,20 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>TCA Toin-Festival 2023 Games</title>
+    <title>TCA Toin-Festival 2024 Games</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="grid-games container">
       <h1 class="title">Games</h1>
       <div>
-        <a href="FPS.html" class="button author-btn">FPS</a>
-        <a href="baloon.html" class="button author-btn">Baloon break</a>
-        <a href="typing.html" class="button author-btn">English Typer</a>
-        <a href="mario.html" class="button author-btn">Mario</a>
+        <a href="invincibletank.html" class="button author-btn">InvincibleTank</a>
+        <a href="suicagame.html" class="button author-btn">Suica Game</a>
+		<a href="snake.html" class="button author-btn">Snake Game</a>
+        <a href="nekomouth1.html" class="button author-btn">物理的に単語を頭に叩き込め！</a>
+        <a href="redcube.html" class="button author-btn">RedCubeAdventure</a>
+        <a href="rhythmy.html" class="button author-btn">Rhythmy</a>
+
       </div>
     </div>
   </body>
