--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container grid-home">
       <div class="title">
         <img src="public/TCALogo.png" alt="TCA" width="400px" />
-        <p class="sub">Toin-Festival 2023</p>
+        <p class="sub">Toin-Festival 2024</p>
       </div>
       <div>
         <a href="games.html" class="button">Games</a>
@@ -23,7 +23,7 @@
             height="25"
           />
         </a>
-        <a href="https://www.toin-fes.com" class="link-icon">
+        <a href="https://toinfes68.com" class="link-icon">
           <img
             src="public/toinsai.png"
             alt="twitter icon"
