update toinfes logo

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </a>
         <a href="https://toinfes68.com" class="link-icon">
           <img
-            src="public/toinsai.png"
+            src="public/toinfes_logo.svg"
             alt="twitter icon"
-            width="30"
+            width="60"
             height="30"
             style="border-radius: 5px"
           />
