--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>TCA Toin-Festival 2023</title>
+    <title>TCA Toin-Festival 2024</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -26,7 +26,7 @@
         <a href="https://toinfes68.com" class="link-icon">
           <img
             src="public/toinfes_logo.svg"
-            alt="twitter icon"
+            alt="official site icon"
             width="60"
             height="30"
             style="border-radius: 5px"
