--- a/games.html
+++ b/games.html
@@ -14,6 +14,10 @@
 		<a href="snake.html" class="button author-btn">Snake Game</a>
         <a href="nekomouth1.html" class="button author-btn">物理的に単語を頭に叩き込め！</a>
         <a href="redcube.html" class="button author-btn">RedCubeAdventure</a>
+        <a href="caferate.html" class="button author-btn">Online Pratform</a>
+        <a href="nekomouth2.html" class="button author-btn">ねこまうすらんらんrun</a>
+        <a href="strawberry.html" class="button author-btn">human vs agent</a>
+        <a href="TCAtetris.html" class="button author-btn">TCAtetris</a>
       </div>
     </div>
   </body>
