--- a/games.html
+++ b/games.html
@@ -2,22 +2,26 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>TCA Toin-Festival 2024 Games</title>
+    <title>Games | TCA Toin-Festival 2024 Games</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="grid-games container">
       <h1 class="title">Games</h1>
+      <a href="index.html" class="pre-btn">
+        <img src="public/arrow.svg" />
+      </a>
       <div>
         <a href="invincibletank.html" class="button author-btn">InvincibleTank</a>
         <a href="suicagame.html" class="button author-btn">Suica Game</a>
-		<a href="snake.html" class="button author-btn">Snake Game</a>
+        <a href="snake.html" class="button author-btn">Snake Game</a>
         <a href="nekomouth1.html" class="button author-btn">物理的に単語を頭に叩き込め！</a>
         <a href="redcube.html" class="button author-btn">RedCubeAdventure</a>
         <a href="caferate.html" class="button author-btn">Online Pratform</a>
         <a href="nekomouth2.html" class="button author-btn">ねこまうすらんらんrun</a>
         <a href="strawberry.html" class="button author-btn">human vs agent</a>
         <a href="TCAtetris.html" class="button author-btn">TCAtetris</a>
+        <a href="airbattle.html" class="button author-btn">Airbattle</a>
       </div>
     </div>
   </body>
