--- a/nekomouth1.html
+++ b/nekomouth1.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>TCA Toin-Festival 2024</title>
+    <title>物理的に単語を頭に叩き込め！ | TCA Toin-Festival 2024</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
