--- a/snake.html
+++ b/snake.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>TCA Toin-Festival 2024</title>
+    <title>Snake Game | TCA Toin-Festival 2024</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
