--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
     <div class="grid-games container">
       <h1 class="title">Games</h1>
       <a href="index.html" class="pre-btn">
-        <img src="public/arrow.svg" />
+        <img src="public/arrow_white.svg" />
       </a>
       <div>
         <a href="invincibletank.html" class="button author-btn">InvincibleTank</a>
