--- a/games.html
+++ b/games.html
@@ -12,7 +12,11 @@
         <img src="public/arrow_white.svg" />
       </a>
       <div>
-        <a href="invincibletank.html" class="button author-btn">InvincibleTank</a>
+        <a href="invincibletank.html" class="button author-btn">
+          InvincibleTank
+          <img href="public/screenshots/invincibletank.png" class="screenshot" />
+          <p class="description">難易度☆☆<br />戦車を操作して他の戦車を撃破しつつ自分を強化していくゲームです。</p>
+        </a>
         <a href="suicagame.html" class="button author-btn">Suica Game</a>
         <a href="snake.html" class="button author-btn">Snake Game</a>
         <a href="nekomouth1.html" class="button author-btn">物理的に単語を頭に叩き込め！</a>
