--- a/games.html
+++ b/games.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Games | TCA Toin-Festival 2024 Games</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, height=device-height" />
   </head>
   <body>
     <div class="grid-games container">
@@ -14,7 +15,7 @@
       <div>
         <a href="invincibletank.html" class="button author-btn">
           InvincibleTank
-          <img href="public/screenshots/invincibletank.png" class="screenshot" />
+          <img src="public/screenshots/invincibletank.png" class="screenshot" alt="Invinsible Tankのスクリーンショット" />
           <p class="description">難易度☆☆<br />戦車を操作して他の戦車を撃破しつつ自分を強化していくゲームです。</p>
         </a>
         <a href="suicagame.html" class="button author-btn">Suica Game</a>
