--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>TCA Toin-Festival 2024</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, height=device-height" />
   </head>
   <body>
     <div class="container grid-home">
