--- a/games.html
+++ b/games.html
@@ -18,15 +18,51 @@
           <img src="public/screenshots/invincibletank.png" class="screenshot" alt="Invinsible Tankのスクリーンショット" />
           <p class="description">難易度☆☆<br />戦車を操作して他の戦車を撃破しつつ自分を強化していくゲームです。</p>
         </a>
-        <a href="suicagame.html" class="button author-btn">Suica Game</a>
-        <a href="airbattle.html" class="button author-btn">Airbattle</a>
-        <a href="snake.html" class="button author-btn">Snake Game</a>
-        <a href="caferate.html" class="button author-btn">Online Pratform</a>
-        <a href="nekomouth1.html" class="button author-btn">物理的に単語を頭に叩き込め！</a>
-        <a href="nekomouth2.html" class="button author-btn">ねこまうすらんらんrun</a>
-        <a href="strawberry.html" class="button author-btn">human vs agent</a>
-        <a href="redcube.html" class="button author-btn">RedCubeAdventure</a>
-        <a href="TCAtetris.html" class="button author-btn">TCAtetris</a>
+        <a href="suicagame.html" class="button author-btn">
+          Suica Game
+          <img src="public/screenshots/suicagame.png" class="screenshot" alt="Suica Gameのスクリーンショット" />
+          <p class="description">難易度☆<br />数字のついたものを落としてくっつけて、より大きな数字の完成を目指しましょう。</p>
+        </a>
+        <a href="airbattle.html" class="button author-btn">
+          Airbattle
+          <img src="public/screenshots/airbattle.png" class="screenshot" alt="Airbattleのスクリーンショット" />
+          <p class="description">難易度☆☆☆☆<br />[2人プレイ用] 3Dの世界で飛行機を操作して、弾を打つことで戦うゲーム。</p>
+        </a>
+        <a href="snake.html" class="button author-btn">
+          Snake Game
+          <img src="public/screenshots/snakegame.png" class="screenshot" alt="Snake Gameのスクリーンショット" />
+          <p class="description">難易度☆☆☆☆☆<br />クリックで蛇の向きを変えられます。タイミングがとにかくシビア。<br />ここだけの話、TCA部員でも3が限界。</p>
+        </a>
+        <a href="caferate.html" class="button author-btn">
+          Online Platform
+          <img src="public/screenshots/onlineplatform.png" class="screenshot" alt="Online Platformのスクリーンショット" />
+          <p class="description">難易度☆☆☆<br />オンラインでゲームが遊べるらしい...!?</p>
+        </a>
+        <a href="nekomouth1.html" class="button author-btn">
+          物理的に単語を頭に叩き込め！
+          <img src="public/screenshots/nekomouth1.png" class="screenshot" alt="物理的に単語を頭に叩き込め！のスクリーンショット" />
+          <p class="description">難易度☆☆<br />単語を頭に叩き込んで(物理)、試験合格を目指せ！割と合格判定は厳しいです。</p>
+        </a>
+        <a href="nekomouth2.html" class="button author-btn">
+          ねこまうすらんらんrun
+          <img src="public/screenshots/nekomouth2.png" class="screenshot" alt="ねこまうすらんらんrunのスクリーンショット" />
+          <p class="description">難易度☆☆☆<br />あの「ねこまうすらんらんrun」がリニューアルして帰ってきた!という映像でおなじみのゲーム。<br />正直、筑附中にいた人以外は「あの」の意味がよくわかりません。</p>
+        </a>
+        <a href="strawberry.html" class="button author-btn">
+          human vs agent
+          <img src="public/screenshots/humanvsagent.png" class="screenshot" alt="human vs agentのスクリーンショット" />
+          <p class="description">難易度☆☆☆<br />AIとプラットフォームゲームで対戦するゲーム。先にトロフィーを5個獲得したほうが勝ちです。</p>
+        </a>
+        <a href="redcube.html" class="button author-btn">
+          Red Cube Adventure
+          <img src="public/screenshots/redcubeadventure.png" class="screenshot" alt="Red Cube Adventureのスクリーンショット" />
+          <p class="description">難易度☆☆☆☆☆<br />立方体を操作してゴールを目指すゲーム。操作方法はシンプルだが、ステージは鬼畜。</p>
+        </a>
+        <a href="TCAtetris.html" class="button author-btn">
+          TCAtetris
+          <img src="public/screenshots/tcatetris.png" class="screenshot" alt="TCAtetrisのスクリーンショット" />
+          <p class="description">難易度☆<br />至って普通のテトリス...じゃない！？</p>
+        </a>
       </div>
     </div>
   </body>
