--- a/games.html
+++ b/games.html
@@ -16,52 +16,52 @@
         <a href="invincibletank.html" class="button author-btn">
           InvincibleTank
           <img src="public/screenshots/invincibletank.png" class="screenshot" alt="Invinsible Tankのスクリーンショット" />
-          <p class="description"><b></b>難易度☆☆</b><br />戦車を操作して他の戦車を撃破しつつ自分を強化していくゲームです。<br /><b>ゲーム大会で使用します！</b></p>
+          <p class="description"><b><u>難易度☆☆</u></b><br />戦車を操作して他の戦車を撃破しつつ自分を強化していくゲームです。<br /><b>ゲーム大会で使用します！</b></p>
         </a>
         <a href="suicagame.html" class="button author-btn">
           Suica Game
           <img src="public/screenshots/suicagame.png" class="screenshot" alt="Suica Gameのスクリーンショット" />
-          <p class="description"><b>難易度☆</b><br />数字のついたものを落としてくっつけて、より大きな数字の完成を目指しましょう。</p>
+          <p class="description"><b><u>難易度☆</u></b><br />数字のついたものを落としてくっつけて、より大きな数字の完成を目指しましょう。</p>
         </a>
         <a href="airbattle.html" class="button author-btn">
           Airbattle
           <img src="public/screenshots/airbattle.png" class="screenshot" alt="Airbattleのスクリーンショット" />
-          <p class="description"><b>難易度☆☆☆☆</b><br />[2人プレイ用] 3Dの世界で飛行機を操作して、弾を打つことで戦うゲーム。</p>
+          <p class="description"><b><u>難易度☆☆☆☆</u></b><br />[2人プレイ用] 3Dの世界で飛行機を操作して、弾を打つことで戦うゲーム。</p>
         </a>
         <a href="snake.html" class="button author-btn">
           Snake Game
           <img src="public/screenshots/snakegame.png" class="screenshot" alt="Snake Gameのスクリーンショット" />
-          <p class="description"><b>難易度☆☆☆☆☆</b><br />クリックで蛇の向きを変えられます。タイミングがとにかくシビア。<br />ここだけの話、TCA部員でも3が限界。</p>
+          <p class="description"><b><u>難易度☆☆☆☆☆</u></b><br />クリックで蛇の向きを変えられます。タイミングがとにかくシビア。<br />ここだけの話、TCA部員でも3が限界。</p>
         </a>
         <a href="caferate.html" class="button author-btn">
           Online Platform
           <img src="public/screenshots/onlineplatform.png" class="screenshot" alt="Online Platformのスクリーンショット" />
-          <p class="description"><b>難易度☆☆☆</b><br />オンラインでゲームが遊べるらしい...!?</p>
+          <p class="description"><b><u>難易度☆☆☆</u></b><br />オンラインでゲームが遊べるらしい...!?</p>
         </a>
         <a href="nekomouth1.html" class="button author-btn">
           物理的に単語を頭に叩き込め！
           <img src="public/screenshots/nekomouth1.png" class="screenshot" alt="物理的に単語を頭に叩き込め！のスクリーンショット" />
-          <p class="description"><b>難易度☆☆</b><br />単語を頭に叩き込んで(物理)、試験合格を目指せ！割と合格判定は厳しいです。</p>
+          <p class="description"><b><u>難易度☆☆</u></b><br />単語を頭に叩き込んで(物理)、試験合格を目指せ！割と合格判定は厳しいです。</p>
         </a>
         <a href="nekomouth2.html" class="button author-btn">
           ねこまうすらんらんrun
           <img src="public/screenshots/nekomouth2.png" class="screenshot" alt="ねこまうすらんらんrunのスクリーンショット" />
-          <p class="description"><b>難易度☆☆☆</b><br />あの「ねこまうすらんらんrun」がリニューアルして帰ってきた!という映像でおなじみのゲーム。<br />正直、筑附中にいた人以外は「あの」の意味がよくわかりません。</p>
+          <p class="description"><b><u>難易度☆☆☆</u></b><br />あの「ねこまうすらんらんrun」がリニューアルして帰ってきた!という映像でおなじみのゲーム。<br />正直、筑附中にいた人以外は「あの」の意味がよくわかりません。</p>
         </a>
         <a href="strawberry.html" class="button author-btn">
           human vs agent
           <img src="public/screenshots/humanvsagent.png" class="screenshot" alt="human vs agentのスクリーンショット" />
-          <p class="description"><b>難易度☆☆☆</b><br />AIとプラットフォームゲームで対戦するゲーム。先にトロフィーを5個獲得したほうが勝ちです。</p>
+          <p class="description"><b><u>難易度☆☆☆</u></b><br />AIとプラットフォームゲームで対戦するゲーム。先にトロフィーを5個獲得したほうが勝ちです。</p>
         </a>
         <a href="redcube.html" class="button author-btn">
           Red Cube Adventure
           <img src="public/screenshots/redcubeadventure.png" class="screenshot" alt="Red Cube Adventureのスクリーンショット" />
-          <p class="description"><b>難易度☆☆☆☆☆</b><br />立方体を操作してゴールを目指すゲーム。操作方法はシンプルだが、ステージは鬼畜。</p>
+          <p class="description"><b><u>難易度☆☆☆☆☆</u></b><br />立方体を操作してゴールを目指すゲーム。操作方法はシンプルだが、ステージは鬼畜。</p>
         </a>
         <a href="TCAtetris.html" class="button author-btn">
           TCAtetris
           <img src="public/screenshots/tcatetris.png" class="screenshot" alt="TCAtetrisのスクリーンショット" />
-          <p class="description"><b>難易度☆</b><br />至って普通のテトリス...じゃない！？</p>
+          <p class="description"><b><u>難易度☆</u></b><br />至って普通のテトリス...じゃない！？</p>
         </a>
       </div>
     </div>
