--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
         <a href="https://toinfes68.com" class="link-icon">
           <img
-            src="public/toinfes_logo.svg"
+            src="public/toinfes_logo.png"
             alt="official site icon"
             width="50"
             height="25"
